
[package]
name = "dlmm-app-interface"
version = "0.1.0"
edition = "2021"
description = "DLMM application interface with embedded CLI and optional web dashboard"

# Define binary entry
[[bin]]
name = "dlmm-app-interface"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0"
solana-client = "=2.2.1"
solana-sdk = "=2.2.1"
solana-instruction = "=2.2.1"
solana-account-decoder = "=2.2.1"
solana-program = "=2.2.1"

mpl-token-metadata = { version = "5.1.1" }
spl-token-metadata-interface = { version = "0.8.0" }
spl-token-2022-interface = { version = "2.1.0" }

axum = { version = "0.8.6", features = ["ws", "macros"] }
clap = { version = "4.1.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
dotenv = { version = "0.15.0" }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tracing-subscriber = "0.3.20"
tracing = "0.1.40"
serde_json = "1.0.82"

# internal crates
saros-sdk = { version = "0.1.0", git = "https://github.com/saros-xyz/saros-dlmm-sdk-rs.git", branch = "main", package = "saros-sdk" }


spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }

# test dependencies
async-trait = "0.1.77"
ahash = "0.8.11"
